# deep_engine

./: README.md  pom.xml
ENGINE/: pom.xml
ENGINE/common/: CMakeLists.txt  pom.xml
ENGINE/common/src/main/native/com/deepis/db/: IDatabase.h  IDatastore.h  ISynchronize.h  ITransaction.h  IWorkflow.h
ENGINE/service/: CMakeLists.txt  pom.xml
ENGINE/service/src/main/native/com/deepis/db/store/relative/: Datastore.h
ENGINE/service/src/main/native/com/deepis/db/store/relative/core/: Information.h  Properties.cxx  Properties.h  RealTime.h  RealTimeAdaptive.h  RealTimeAtomic.h  RealTimeBuilder.h  RealTimeCompress.h  RealTimeCondition.h  RealTimeContext.h  RealTimeConverter.h  RealTimeDiscover.h  RealTimeExtra.h  RealTimeIndex.h  RealTimeIterator.h  RealTimeLocality.h  RealTimeMap.cxx  RealTimeMap.h  RealTimeProtocol_v1_0.cxx  RealTimeProtocol_v1_0.h  RealTimeProtocol_v1_1.h  RealTimeRecovery.h  RealTimeReporting.h  RealTimeResource.h  RealTimeSchema.h  RealTimeShare.h  RealTimeStatistics.h  RealTimeSummary.h  RealTimeTransaction.h  RealTimeTypes.h  RealTimeUtilities.h  RealTimeValidate.h  RealTimeVersion.h  Segment.h  Transaction.h
ENGINE/service/src/main/native/com/deepis/db/store/relative/util/: BasicArray.h  BufferedRandomAccessFile.cxx  BufferedRandomAccessFile.h  ConcurrentContainer.h  ConcurrentObject.h  DynamicUtils.h  InvalidException.h  License.h  LockableArrayList.h  LockableBasicArray.h  LockableHashMap.h  LockableHashSet.h  MapFileSet.h  MapFileUtil.cxx  MapFileUtil.h  MeasuredRandomAccessFile.h  PermissionException.h  ReferenceObject.h  Versions.cxx  Versions.h
ENGINE/service/src/test/native/com/deepis/db/store/relative/core/: TestClient.h  TestCompression.cxx  TestConcurrent.cxx  TestDelete.cxx  TestDynamicSecondary.cxx  TestFileRange.cxx  TestIsolation.cxx  TestLock.cxx  TestMemoryGrowth.cxx  TestMultiThread.cxx  TestNextPrev.cxx  TestPerf.cxx  TestRandom.cxx  TestTransaction.cxx  TestUnitInt.cxx  TestUnitSecondary.cxx  TestUnitString.cxx  TestUnitVariable.cxx  TestUpdate.cxx
ENGINE/service/src/test/native/com/deepis/db/store/relative/util/: TestBufferedRandomAccessFile.cxx  TestMeasuredRandomAccessFile.cxx
PLATFORM/src/main/native/cxx/lang/: types.h
